# bank-email-parser

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.agents/skills/add-bank-parser/: SKILL.md
bank_email_parser/: api.py  cli.py  utils.py
bank_email_parser/parsers/: __init__.py  axis.py  base.py  bom.py  equitas.py  hdfc.py  hsbc.py  icici.py  idfc.py  indusind.py  jupiter.py  onecard.py  sbi.py  slice.py  uboi.py  yesbank.py
bank_email_parser/parsers/kotak/: __init__.py  _common.py  accounts.py  cards.py  digital.py  statement.py  upi.py
bank_email_parser/parsing/: __init__.py  amounts.py  dates.py  html.py  keys.py
src/bank_email_parser/: __init__.py  api.py  exceptions.py  models.py  utils.py
src/bank_email_parser/parsers/: axis.py  base.py  bom.py  equitas.py  hdfc.py  hsbc.py  icici.py  idfc.py  indusind.py  kotak.py  onecard.py  sbi.py  slice.py  uboi.py  yesbank.py
tests/: test_contracts.py  test_new_parsers.py  test_registry.py  test_repository_hygiene.py
