[project]
name = "bank-email-parser"
version = "0.1.0"
description = "Parse bank transaction alert emails into structured data"
readme = "README.md"
authors = [
    { name = "Akhil Narang", email = "me@akhilnarang.dev" }
]
requires-python = ">=3.14"
dependencies = [
    "pydantic>=2.0",
    "beautifulsoup4>=4.12",
]

[build-system]
requires = ["uv_build>=0.9.25,<0.10.0"]
build-backend = "uv_build"
